--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.3.0",
     "vue": "^2.5.22"
   },
   "devDependencies": {
